--- a/advanced.html
+++ b/advanced.html
@@ -36,6 +36,7 @@
             position: static;
             width: 200px;
             height: 200px;
+            transition: width 2s;
         }
         .div-2 {
             background-color: cornflowerblue;
@@ -43,6 +44,7 @@
             width: 200px;
             height: 200px;
             left: 20px;
+            transition: width 2s;
         }
         .div-3 {
             background-color: rgb(150, 87, 138);
@@ -51,6 +53,7 @@
             height: 200px;
             top: 50px;
             right: 50px;
+            transition: width 2s;
         }
         .div-4 {
             background-color: rgb(72, 116, 135);
@@ -59,6 +62,7 @@
             position: absolute;
             left: 400px;
             bottom: 50px;
+            transition: width 2s;
         }
         .div-5 {
             background-color: lightblue;
@@ -67,22 +71,28 @@
             position: fixed; 
             right: 50px;
             bottom: 50px;
+            transition: width 2s;
         }
 
         .div-1:hover{
             background-color: rgb(196, 141, 150);
+            width: 300px;
         }
         .div-2:hover {
             background-color: rgb(67, 101, 164);
+            width: 300px;
         }
         .div-3:hover{
             background-color: rgb(103, 59, 95);
+            width: 300px;
         }
         .div-4:hover{
             background-color: rgb(54, 87, 101);
+            width: 300px;
         }
         .div-5:hover{
             background-color: rgb(135, 170, 181);
+            width: 300px;
         }
     </style>
 </body>
